{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "008a106b-a771-47bd-b397-140ad42a9e7b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5c5eca8e-a8d4-4721-ba8b-88dd127cb602",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "310fa82b-5fbf-4c2e-aed9-259987dd89fb",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}